Add the "Edit Map" action to the KDE application (osm theme only).

Synchronize settings storage between the Qt and the KDE application for
the "edit map externally" action. Add an "Always ask" value.
BUG: 261123
FIXED-IN: 1.1.0
(cherry picked from commit e0ca3ce28e70727a80a7fb893237ccf37b95f937)