src/marble_part.h
@@ -177,6 +177,7 @@ class MarblePart: public KParts::ReadOnlyPart
     void  openNewBookmarkFolderDialog();
 //    void  createBookmarkMenu();
 
+    void  updateMapEditButtonVisibility( const QString &mapTheme );
 
   private:
     void  setupActions();
@@ -220,6 +221,7 @@ class MarblePart: public KParts::ReadOnlyPart
     KAction      *m_controlTimeAction;
     KAction      *m_lockFloatItemsAct;
     KAction      *m_mapWizardAct;
+    KAction      *m_externalMapEditorAction;
 
     //Bookmark Menu
     KAction *m_addBookmarkAction;
@@ -260,6 +262,7 @@ class MarblePart: public KParts::ReadOnlyPart
     GraphicsSystem m_previousGraphicsSystem;
 
     QHash< int, int > m_timezone;
+    QMap<int, QString> m_externalEditorMapping;
 };
 
 }
